# stock-crawler

./: .gitignore  CMakeLists.txt  README.md
docs/: api-documentation.md  documentation.md  external-api.md  get-started.md  internal-api.md
examples/: yahoo_finance.cpp  yahoo_finance_list_batch.cpp
src/: RetrieveData.cpp  RetrieveData.hpp  RetrieveDataInterface.hpp
src/yahoo_finance/: YahooFinance.cpp  YahooFinance.hpp
